--- a/css/homepage.css
+++ b/css/homepage.css
@@ -964,7 +964,7 @@ body {
   background: rgba(0, 0, 0, 0.92); }
 
 .services .ser-header {
-  padding: 50px 0; }
+  padding: 40px 0; }
 
 .services .ser-header h2, h3 {
   font-size: 30px;
@@ -1007,6 +1007,10 @@ body {
   border-radius: 50%;
   display: inline-block;
   background-color: #000; }
+
+.owl-theme .owl-dot {
+  position: relative !important;
+  bottom: 30px !important; }
 
 .owl-theme .owl-dots span {
   width: 20px !important;
